--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -128,7 +128,9 @@ input[type="date"] {
   border-radius: 12px;
   max-width: 800px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s, color 0.3s;
+  /* transition: background-color 0.3s, color 0.3s; */
+  transition: all 0.3s ease;
+
 }
 
 .apod-card img,
