--- a/frontend/src/components/APODCard.css
+++ b/frontend/src/components/APODCard.css
@@ -8,6 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    animation: fadeIn 0.6s ease-in-out;
 }
   
 .apod-title {
@@ -37,6 +38,18 @@
     text-align: justify;
     color: #bcb7b7;
 }
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(16px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+  
 
 @media (max-width: 600px) {
     .apod-card {
@@ -77,11 +90,15 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s;
+    /* transition: background-color 0.3s; */
+    transition: all 0.3s ease;
 }
 
-.favourite-button:hover {
+.favourite-button:hover,
+.favourite-button.delete-button:hover {
     background-color: #f50057;
+    transform: scale(1.05);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 .favourite-button.delete-button {
@@ -96,7 +113,7 @@
     font-weight: 600;
 }
   
-  .favourite-button.delete-button:hover {
+  /* .favourite-button.delete-button:hover {
     background-color: #d9363e;
-}
+} */
   
