--- a/frontend/src/components/APODCard.css
+++ b/frontend/src/components/APODCard.css
@@ -39,17 +39,16 @@
     color: #bcb7b7;
 }
 
-@keyframes fadeIn {
+@keyframes fadeInUp {
     from {
       opacity: 0;
-      transform: translateY(16px);
+      transform: translateY(20px);
     }
     to {
       opacity: 1;
       transform: translateY(0);
     }
 }
-  
 
 @media (max-width: 600px) {
     .apod-card {
