--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,13 +10,14 @@ body {
 
 /* 전체 앱 컨테이너 */
 .app-container {
-  max-width: 900px;
-  margin: 0 auto;
+  max-width: 1200px;
+  /* margin: 0 auto; */
   padding: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #121212;
   color: white;
   min-height: 100vh;
+  text-align: center;
 }
 
 /* 기본 이미지 스타일 */
@@ -84,21 +85,21 @@ p {
   color: #80d8ff; /* 다크 모드에서 밝고 시원한 블루 계열 */
 }
 
-.dark input[type="date"] {
+/* .dark input[type="date"] {
   background-color: #2b2b2b;
   color: #fff;
   border: 1px solid #444;
-}
+} */
 
 /* 날짜 선택 인풋 */
-input[type="date"] {
-  padding: 8px 12px;
+/* input[type="date"] {
+  padding: 8px;
   font-size: 1rem;
   margin: 10px;
   border-radius: 4px;
   border: 1px solid #ccc;
   transition: background-color 0.3s, color 0.3s;
-}
+} */
 
 /* 에러 메시지 */
 .error {
