--- a/frontend/src/pages/MediaFilter.css
+++ b/frontend/src/pages/MediaFilter.css
@@ -135,6 +135,13 @@ h1 {
   opacity: 1;
 }
 
+.video-dates-content li strong:hover {
+  background-color: purple;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 0 2px;
+}
+
 .video-dates-content ul {
   list-style-type: disc;
   padding-left: 1.2rem;
