--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,23 +2,39 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f4f4f9;
   color: #222;
   transition: background-color 0.3s, color 0.3s;
 }
 
+/* html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+} */
+
+
 /* 전체 앱 컨테이너 */
 .app-container {
   max-width: 1200px;
   /* margin: 0 auto; */
-  padding: 20px;
+  padding: 80px 20px 20px; /* 위쪽 여백을 nav바 높이만큼 확보 */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #121212;
+  background-color: transparent;
   color: white;
   min-height: 100vh;
   text-align: center;
 }
+
 
 /* 기본 이미지 스타일 */
 img {
