--- a/frontend/src/pages/History.css
+++ b/frontend/src/pages/History.css
@@ -1,3 +1,11 @@
+.dark .history-info {
+    color: white;
+}
+
+.history-info {
+    color: black;
+}
+
 .history-list {
     list-style: none;
     padding: 0;
@@ -24,32 +32,22 @@
     flex-grow: 1;
 }
   
-/* .delete-button {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 0 6px;
-    transition: color 0.2s ease;
-}
-  
-.delete-button:hover {
-    color: #e63946;
-} */
-  
 .sort-buttons {
     display: flex;
-    gap: 0.5rem;
-    margin-bottom: 1rem;
+    flex-direction: row;
+    gap: 12px;
+    font-size: 1rem;
+    justify-content: center;
 }
   
 .sort-buttons button {
-    padding: 6px 12px;
+    flex: 1;
+    padding: 10px 10px;
     background-color: #ddd;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    max-width: 150px;
 }
   
 .sort-buttons button.active {
