Finish up the Nav UI

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -29,6 +29,14 @@
   color: #333;
 }
   
+.intro-navbar {
+  background-color: #000000;
+}
+
+.intro-navbar .nav-link {
+  color: #ffffff;
+}
+
 .dark .nav-link {
   color: #ddd;
 }
