--- a/frontend/src/components/DatePicker.css
+++ b/frontend/src/components/DatePicker.css
@@ -13,6 +13,7 @@
   
 .datepicker-input {
   font-size: 1rem;
+  margin: 1px;
   padding: 0.5rem 1rem;
   border-radius: 8px;
   border: 2px solid #426692;
@@ -47,6 +48,12 @@
 
 .dark .datepicker-label {
   color: #fdaa6e;
+}
+
+.dark .datepicker-input-group input[type="date"] {
+  color: #ffffff;
+  background-color: #2b2b2b;
+  border: 1px solid #444;
 }
 
 .dark .date-nav-btn {
