--- a/frontend/src/pages/Favourites.css
+++ b/frontend/src/pages/Favourites.css
@@ -1,28 +1,33 @@
 .sort-buttons {
   display: flex;
-  gap: 0.5rem;
+  flex-direction: row;
+  justify-content: center;
   margin-bottom: 1rem;
+  font-size: 1rem;
+  gap: 12px;
 }
 
 .sort-buttons button {
-  padding: 6px 12px;
-  background-color: #ddd;
+  flex: 1;
+  padding: 10px 10px;
+  background-color: #bdbdc3;
+  max-width: 150px;
+  cursor: pointer;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .sort-buttons button.active {
-  background-color: #333;
+  background-color: #27548A;
   color: white;
 }
 
 .sort-buttons button:hover {
-  background-color: red;
+  background-color: #f5c8a1;
 }
 
-/* === Card animation for smooth appearance === */
+/* === Card animation for smooth appearance ===*/
 .apod-card {
   animation: fadeInUp 0.6s ease both;
 }
